test/org/midica/testfiles/failing/eff-flow-broken-by-other-channel.midica
INCLUDE inc/instruments.midica


0: vol.wait()
1: balance.wait()
0: .set(50)

